adicionei imagem, mudei a cor da pagina e alterei os icones

--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 .background {
   display: flex;
-  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(8, 0, 26) 100%);
-  height: 100vh;
+  background: linear-gradient(
+    180deg,
+    rgb(0, 60, 224) 0%,
+    rgb(0, 189, 223) 100%
+  );
+  justify-content: space-between;
+  min-height: 100vh;
 }
 .texto {
-  flex: 0.5;
+  flex: 0.4;
 }
 * {
   margin: 0;
@@ -13,7 +18,6 @@
   font-family: "Comfortaa";
   font-size: 100px;
   color: white;
-  margin-left: 180px;
   padding-top: 200px;
 }
 .sobre {
@@ -21,7 +25,6 @@
   font-weight: 100;
   font-size: 50px;
   color: white;
-  margin-left: 200px;
   margin-top: 40px;
 }
 .descricao {
@@ -29,11 +32,12 @@
   font-weight: 300;
   font-size: 35px;
   color: white;
-  margin-left: 200px;
+  width: 750px;
   margin-top: 0px;
 }
 .redesocial {
   display: flex;
+  flex: 0.1;
   flex-direction: column;
 }
 .redesocial img {
@@ -44,7 +48,6 @@
 .caixa {
   width: 50px;
   height: 50px;
-  background: #160064;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -58,4 +61,15 @@
 .caixa img {
   width: 45px;
   height: 45px;
+}
+.personagem img {
+  height: 700px;
+  margin-top: 125px;
+  margin-left: 90px;
+}
+.personagem {
+  flex: 0.4;
+}
+.download {
+  margin-top: auto;
 }
